# pastis

./: .coderabbit.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
.greptile/: config.json
crates/execution/: Cargo.toml
crates/execution/src/: lib.rs
crates/exex-btcfi/: Cargo.toml
crates/exex-btcfi/src/: lib.rs
crates/exex-manager/: Cargo.toml
crates/exex-manager/src/: lib.rs
crates/exex-otel/: Cargo.toml
crates/exex-otel/src/: lib.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: lib.rs
crates/node/: Cargo.toml
crates/node-spec-core/: Cargo.toml
crates/node-spec-core/src/: exex_delivery.rs  l1_finality.rs  lib.rs  mcp.rs  notification.rs  protocol_version.rs
crates/node/src/: lib.rs  replay.rs  runtime.rs
crates/node/tests/: replay_engine.rs
crates/node/tests/fixtures/replay/: contiguous.json  reorg.json
crates/node/tests/fixtures/replay/rpc/: CAPTURE_METADATA.md  mainnet_block_7242623_get_block_with_txs.json  mainnet_block_7242623_get_state_update.json  mainnet_block_7242624_get_block_with_txs.json  mainnet_block_7242624_get_state_update.json  mainnet_block_7242625_get_block_with_txs.json  mainnet_block_7242625_get_state_update.json
crates/proving/: Cargo.toml
crates/proving/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/fixtures/: starknet_mainnet_block0.json
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: BOSS_DEMO_RUNBOOK.md  DEFINITIVE_ARCHITECTURE.md  PRODUCTION_SOAK_RUNBOOK.md
scripts/: boss-demo-smoke.sh  capture-replay-rpc-fixtures.sh  check-replay-fixture-lock.sh  check-size-of-transitive.sh  check-storage-adapter-deps.sh  check-vendored-size-of.sh  daemon-soak-gate.sh  perf-budget-check.sh  security-audit-check.sh
