[workspace]
members = [
    "crates/node-spec-core",
    "crates/types",
    "crates/storage",
    "crates/execution",
    "crates/node",
    "crates/exex-manager",
]
resolver = "2"

[workspace.dependencies]
bincode = "1.3"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
