[workspace]
members = [
    "crates/node-spec-core",
    "crates/types",
    "crates/storage",
    "crates/execution",
    "crates/proving",
    "crates/exex-btcfi",
    "crates/exex-otel",
    "crates/mcp-server",
    "crates/rpc",
    "crates/node",
    "crates/exex-manager",
]
resolver = "2"

[workspace.dependencies]
bincode = "1.3"
log = "0.4"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
