[package]
name = "starknet-node-execution"
version = "0.1.0"
edition = "2024"

[features]
default = []
blockifier-adapter = [
    "dep:blockifier",
    "dep:starknet_api",
    "dep:num-traits",
    "starknet-node-types/blockifier-adapter",
]

[dependencies]
node-spec-core = { path = "../node-spec-core" }
semver = { workspace = true }
starknet-node-types = { path = "../types" }
thiserror = { workspace = true }

blockifier = { version = "0.18.0-dev.0", optional = true }
starknet_api = { version = "0.18.0-dev.0", optional = true }
num-traits = { version = "0.2", optional = true }
