[package]
name = "starknet-node"
version = "0.1.0"
edition = "2024"

[features]
default = []
production-adapters = [
    "starknet-node-storage/apollo-adapter",
    "starknet-node-execution/blockifier-adapter",
]

[dependencies]
bincode = { workspace = true }
node-spec-core = { path = "../node-spec-core" }
semver = { workspace = true }
starknet-node-execution = { path = "../execution" }
starknet-node-proving = { path = "../proving" }
starknet-node-mcp-server = { path = "../mcp-server" }
starknet-node-rpc = { path = "../rpc" }
starknet-node-storage = { path = "../storage" }
starknet-node-types = { path = "../types" }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
