[package]
name = "starknet-node"
version = "0.1.0"
edition = "2024"

[features]
default = []
production-adapters = [
    "starknet-node-storage/apollo-adapter",
    "starknet-node-execution/blockifier-adapter",
]

[dependencies]
axum = "0.7"
bincode = { workspace = true }
node-spec-core = { path = "../node-spec-core" }
semver = { workspace = true }
serde = { workspace = true }
starknet-node-exex-btcfi = { path = "../exex-btcfi" }
starknet-node-execution = { path = "../execution" }
starknet-node-proving = { path = "../proving" }
starknet-node-mcp-server = { path = "../mcp-server" }
starknet-node-rpc = { path = "../rpc" }
starknet-node-storage = { path = "../storage" }
starknet-node-types = { path = "../types" }
thiserror = { workspace = true }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time", "net"] }

[dev-dependencies]
serde_json = "1.0"
