[package]
name = "starknet-node-rpc"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = "1.0"
starknet-node-storage = { path = "../storage" }
starknet-node-types = { path = "../types" }
thiserror = { workspace = true }

[dev-dependencies]
semver = { workspace = true }
