[package]
name = "starknet-node-storage"
version = "0.1.0"
edition = "2024"

[features]
default = []
papyrus-adapter = ["dep:papyrus_storage", "dep:starknet_api", "dep:starknet-types-core"]

[dependencies]
hex = "0.4"
semver = { workspace = true }
sha2 = "0.10"
starknet-node-types = { path = "../types" }
thiserror = { workspace = true }

papyrus_storage = { version = "0.4.0-rc.0", optional = true }
starknet_api = { version = "0.13.0-rc.0", optional = true }
starknet-types-core = { version = "0.1.5", optional = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = "1.0"
tempfile = "3.10"
