[package]
name = "starknet-node-types"
version = "0.1.0"
edition = "2024"

[features]
default = []
blockifier-adapter = ["dep:starknet_api"]

[dependencies]
semver = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
starknet-types-core = "0.2.4"
starknet_api = { version = "0.18.0-dev.0", optional = true }
